Added meta description and Open Graph data

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,6 +10,18 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Cameramakers is a group of craftsmen dedicated to sharing knowledge and preserving mechanical cameras for generations to come.">
+
+    <meta property="og:type" content="business.business">
+    <meta property="og:title" content="Cameramakers">
+    <meta property="og:description" content="Cameramakers is a group of craftsmen dedicated to sharing knowledge and preserving mechanical cameras for generations to come.">
+    <meta property="og:url" content="cameramakers.com">
+    <meta property="og:image" content="//cameramakers.com/ogimage.png">
+    <meta property="business:contact_data:street_address" content="Kyttälänkatu 1">
+    <meta property="business:contact_data:locality" content="Tampere">
+    <meta property="business:contact_data:region" content="Pirkanmaa">
+    <meta property="business:contact_data:postal_code" content="33100">
+    <meta property="business:contact_data:country_name" content="Finland">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -33,5 +45,21 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org/",
+      "@type": "Organization",
+      "name": "Cameramakers",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Kyttälänkatu 1",
+        "addressLocality": "Tampere",
+        "addressRegion": "Pirkanmaa",
+        "postalCode": "33100"
+      },
+      "telephone": "+358102311770"
+    }
+    </script>
   </body>
 </html>
