Fixed OG errors

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,8 +15,9 @@
     <meta property="og:type" content="business.business">
     <meta property="og:title" content="Cameramakers">
     <meta property="og:description" content="Cameramakers is a group of craftsmen dedicated to sharing knowledge and preserving mechanical cameras for generations to come.">
-    <meta property="og:url" content="cameramakers.com">
-    <meta property="og:image" content="//cameramakers.com/ogimage.png">
+    <meta property="og:url" content="https://cameramakers.com">
+    <meta property="og:image" content="https://cameramakers.com/ogimage.png">
+    <meta property="og:image:alt" content="Cameramakers - Cultivating knowledge. Preserving cameras.">
     <meta property="business:contact_data:street_address" content="Kyttälänkatu 1">
     <meta property="business:contact_data:locality" content="Tampere">
     <meta property="business:contact_data:region" content="Pirkanmaa">
